--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		   				<div class="slider-text-inner js-fullheight">
 		   					<div class="desc">
 		   						<p><span>Banner 1</span></p>
-		   						<h2>Texto descriptivo</h2>
+		   						<h2>Test de actualización</h2>
 			   					<p>
 			   						<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
 			   					</p>
