--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="assets/puntomx_ico.ico">
 	<!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
 
 	<!-- Stylesheets -->
@@ -114,8 +114,8 @@
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
 		   				<div class="slider-text-inner js-fullheight">
 		   					<div class="desc">
-		   						<p><span>Banner 1</span></p>
-		   						<h2>Test de actualización</h2>
+								<p><span><i>Vive el sabor de la CDMX en nuestro:</i></span></p>
+		   						<h2>Restaurante MX</h2>
 			   					<p>
 			   						<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
 			   					</p>
@@ -130,8 +130,8 @@
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
 		   				<div class="slider-text-inner js-fullheight">
 		   					<div class="desc">
-								<p><span>Banner 2</span></p>
-								<h2>Texto descriptivo</h2>
+								<p><span>Conoce nuestros nuevos paquetes para parejas:</span></p>
+								<h2>Paquetes especiales</h2>
 								<p>
 									<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
 								</p>
@@ -146,8 +146,24 @@
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
 		   				<div class="slider-text-inner js-fullheight">
 		   					<div class="desc">
-								<p><span>Banner 3</span></p>
-								<h2>Texto descriptivo</h2>
+								<p><span>El punto más cómodo de México</span></p>
+								<h2>En el centro de la CDMX</h2>
+								<p>
+									<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
+								</p>
+		   					</div>
+		   				</div>
+		   			</div>
+		   		</div>
+		   	</li>
+		   	<li style="background-image: url(images/slider3.jpg);">
+		   		<div class="overlay-gradient"></div>
+		   		<div class="container">
+		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
+		   				<div class="slider-text-inner js-fullheight">
+		   					<div class="desc">
+								<p><span>Al reservar por nuestro sitio web</span></p>
+								<h2>Tarifa especial</h2>
 								<p>
 									<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
 								</p>
