--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<aside id="fh5co-hero" class="js-fullheight">
 		<div class="flexslider js-fullheight">
 			<ul class="slides">
-		   	<li style="background-image: url(images/slider1.jpg);">
+		   	<li style="background-image: url(assets/webp/ROOM_SERVICE.webp);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -117,14 +117,14 @@
 								<p><span><i>Vive el sabor de la CDMX en nuestro:</i></span></p>
 		   						<h2>Restaurante MX</h2>
 			   					<p>
-			   						<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
+			   						<a href="restaurant.html" class="btn btn-primary btn-lg">Ver más...</a>
 			   					</p>
 		   					</div>
 		   				</div>
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/slider2.jpg);">
+		   	<li style="background-image: url(assets/webp/paquetes_especiales.webp);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -133,14 +133,14 @@
 								<p><span>Conoce nuestros nuevos paquetes para parejas:</span></p>
 								<h2>Paquetes especiales</h2>
 								<p>
-									<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
+									<!--<a href="#" class="btn btn-primary btn-lg">Ver más...</a>-->
 								</p>
 		   					</div>
 		   				</div>
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/slider3.jpg);">
+		   	<li style="background-image: url(assets/webp/RECEPCION.webp);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -156,7 +156,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(images/slider3.jpg);">
+		   	<li style="background-image: url(assets/webp/AMENIDADES_1.webp);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
