--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hoteles PUNTO MX</title>
+	<title>Inicio | Hotel Punto MX</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Website Hoteles PUNTO MX" />
 	<meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
@@ -69,7 +69,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a class="active" href="index.html">Inicio</a></li>
@@ -182,8 +182,7 @@
 				<div id="availability">
 					<div class="a-col action">
 						<a href="#">
-							<span>Reserva</span>
-							ahora
+							<span>Reserva</span> ahora
 						</a>
 					</div>
 				</div>
@@ -227,82 +226,80 @@
 
 			<div class="row">
 				<div class="feature-full-1col">
-					<div class="image" style="background-image: url(images/hotel_feture_1.jpg);">
+					<div class="image" style="background-image: url(assets/webp/EJECUTIVA_1.webp);">
 						<div class="descrip text-center">
-							<p><small>Reserva por</small><span>$00/noche</span></p>
+							<p><small>Reserva por</small><span>$1,087.87/noche</span></p>
 						</div>
 					</div>
 					<div class="desc">
 						<h3>Ejecutiva</h3>
-						<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo, in suscipit urna condimentum sed. Vivamus augue enim, consectetur ac interdum a, pulvinar ac massa. Nullam malesuada congue </p>
-						<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+						<p>Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios.</p>
+						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí<i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
 
 				<div class="feature-full-2col">
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(images/hotel_feture_2.jpg);">
+						<div class="image" style="background-image: url(assets/webp/DELUXE_QUEEN.png);">
 							<div class="descrip text-center">
-								<p><small>Reserva por</small><span>$00/noche</span></p>
+								<p><small>Reserva por</small><span>$1,221.76/noche</span></p>
 							</div>
 						</div>
 						<div class="desc">
 							<h3>Deluxe Cama Queen</h3>
-							<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo, 
-							in suscipit urna condimentum sed. </p>
+							<p>Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas.</p>
 							<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(images/hotel_feture_3.jpg);">
+						<div class="image" style="background-image: url(assets/webp/DELUXE_2_CAMAS_2.webp);">
 							<div class="descrip text-center">
-								<p><small>Reserva por</small><span>$00/noche</span></p>
+								<p><small>Reserva por</small><span>$1,297.08/noche</span></p>
 							</div>
 						</div>
 						<div class="desc">
 							<h3>Deluxe Dos Camas</h3>
-							<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo, in suscipit urna condimentum sed. </p>
+							<p>Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas.</p>
 							<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
 				</div>
 
 				<div class="feature-full-1col" style="flex-direction: row-reverse;">
-					<div class="image" style="background-image: url(images/hotel_feture_1.jpg);">
+					<div class="image" style="background-image: url(assets/webp/MASTER_SUITE.webp);">
 						<div class="descrip text-center">
 							<p><small>Reserva por</small><span>$00/noche</span></p>
 						</div>
 					</div>
 					<div class="desc">
 						<h3>Master Suite</h3>
-						<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo, in suscipit urna condimentum sed. Vivamus augue enim, consectetur ac interdum a, pulvinar ac massa. Nullam malesuada congue </p>
+						<p>Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte.</p>
 						<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
 
 				<div class="feature-full-2col" style="flex-direction: revert">
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(images/hotel_feture_2.jpg);">
+						<div class="image" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/41.png);">
 							<div class="descrip text-center">
-								<p><small>Reserva por</small><span>$00/noche</span></p>
+								<p><small>Reserva por</small><span>$1,589.96/noche</span></p>
 							</div>
 						</div>
 						<div class="desc">
 							<h3>Suite Tina Antigua</h3>
-							<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo,
-								in suscipit urna condimentum sed. </p>
+							<p>En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel.</p>
 							<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(images/hotel_feture_3.jpg);">
+						<div class="image" style="background-image: url(assets/webp/JACUZZI.webp);">
 							<div class="descrip text-center">
-								<p><small>Reserva por</small><span>$00/noche</span></p>
+								<p><small>Reserva por</small><span>$1,589.96/noche</span></p>
 							</div>
 						</div>
 						<div class="desc">
 							<h3>Suite Jacuzzi</h3>
-							<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo, in suscipit urna condimentum sed. </p>
+							<p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel.</p>
 							<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
@@ -310,14 +307,14 @@
 			</div>
 
 			<div class="feature-full-1col">
-				<div class="image" style="background-image: url(images/hotel_feture_1.jpg);">
+				<div class="image" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/85.png);">
 					<div class="descrip text-center">
-						<p><small>Reserva por</small><span>$00/noche</span></p>
+						<p><small>Reserva por</small><span>$1,380.76/noche</span></p>
 					</div>
 				</div>
 				<div class="desc">
 					<h3>Junior Suite</h3>
-					<p>Pellentesque habitant morbi tristique senectus et netus ett mauada fames ac turpis egestas. Etiam euismod tempor leo, in suscipit urna condimentum sed. Vivamus augue enim, consectetur ac interdum a, pulvinar ac massa. Nullam malesuada congue </p>
+					<p>Habitación amplia con cama king size, con vista interior, en ella encontraras la comodidad necesaria para relajarte.</p>
 					<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 				</div>
 			</div>
