--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(assets/webp/RECEPCION.webp);">
+		   	<li style="background-image: url(https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1c/c0/e2/55/hotel-punto-mx.jpg?w=1200&h=-1&s=1);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -156,7 +156,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(assets/webp/AMENIDADES_1.webp);">
+		   	<li style="background-image: url(assets/webp/RECEPCION.webp);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -371,13 +371,12 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
-									<img src="images/tab_img_1.jpg" class="img-responsive" alt="Image">
+									<img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/17/47/60/99/hotel-punto-mx.jpg?w=1200&h=-1&s=1" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
-									<span class="super-heading-sm">Lorem.</span>
+									<span class="super-heading-sm">Conoce nuestro</span>
 									<h3 class="heading">Restaurante MX</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias officia perferendis modi impedit, rem quasi veritatis. Consectetur obcaecati incidunt, quae rerum, accusamus sapiente fuga vero at. Quia, labore, reprehenderit illum dolorem quae facilis reiciendis quas similique totam sequi ducimus temporibus ex nemo, omnis perferendis earum fugit impedit molestias animi vitae.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam neque blanditiis eveniet nesciunt, beatae similique doloribus, ex impedit rem officiis placeat dignissimos molestias temporibus, in! Minima quod, consequatur neque aliquam.</p>
+									<p>México es un país que ofrece una gran variedad de platillos y bebidas hechos con un sin fin de ingredientes que, por su sabor, olor, textura y presentación, pueden enamorar a cualquiera. En Punto MX somos sin duda el lugar ideal para visitar, usamos ingredientes frescos en formas imaginativas y creativas para servirte los mejores platillos de la zona, bajo un acogedor ambiente familiar. Y sin duda con un excelente servicio, siempre <a href="restaurant.html"><small>Ver más</small>...</a></p>
 									<p class="service-hour">
 										<span>Horario de Servicio</span>
 										<strong>7:30 AM - 8:00 PM</strong>
