--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 								<div class="col-md-6">
 									<span class="super-heading-sm">Conoce nuestro</span>
 									<h3 class="heading">Restaurante MX</h3>
-									<p>México es un país que ofrece una gran variedad de platillos y bebidas hechos con un sin fin de ingredientes que, por su sabor, olor, textura y presentación, pueden enamorar a cualquiera. En Punto MX somos sin duda el lugar ideal para visitar, usamos ingredientes frescos en formas imaginativas y creativas para servirte los mejores platillos de la zona, bajo un acogedor ambiente familiar. Y sin duda con un excelente servicio, siempre <a href="restaurant.html"><small>Ver más</small>...</a></p>
+									<p>México es un país que ofrece una gran variedad de platillos y bebidas hechos con un sin fin de ingredientes que, por su sabor, olor, textura y presentación, pueden enamorar a cualquiera. En Punto MX somos sin duda el lugar ideal para visitar, usamos ingredientes frescos en formas imaginativas y creativas para servirte los mejores platillos de la zona, bajo un acogedor ambiente familiar.</p>
 									<p class="service-hour">
 										<span>Horario de Servicio</span>
 										<strong>7:30 AM - 8:00 PM</strong>
@@ -389,13 +389,13 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
-									<img src="images/tab_img_2.jpg" class="img-responsive" alt="Image">
+									<img src="assets/webp/AMENIDADES_2.webp" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
-									<span class="super-heading-sm">Lorem.</span>
+									<span class="super-heading-sm">Conoce nuestro</span>
 									<h3 class="heading">Cafe MX</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias officia perferendis modi impedit, rem quasi veritatis. Consectetur obcaecati incidunt, quae rerum, accusamus sapiente fuga vero at. Quia, labore, reprehenderit illum dolorem quae facilis reiciendis quas similique totam sequi ducimus temporibus ex nemo, omnis perferendis earum fugit impedit molestias animi vitae.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam neque blanditiis eveniet nesciunt, beatae similique doloribus, ex impedit rem officiis placeat dignissimos molestias temporibus, in! Minima quod, consequatur neque aliquam.</p>
+									<p>La tradición en Café MX se ve reflejada como lugar de reunión, para discutir y pasar el tiempo;  no pretendemos ser sólo un sitio para consumir, somos el punto donde, con la excusa del café, se pasa el tiempo. En Café MX te haremos formar parte de casa para que tus sentidos sean tocados por cada bebida que preparamos con amor y dedicación.
+									 Visítanos y no te arrepentirás de nuestro Café</p>
 									<p class="service-hour">
 										<span>Horario de Servicio</span>
 										<strong>7:30 AM - 8:00 PM</strong>
@@ -411,10 +411,11 @@
 									<img src="images/tab_img_3.jpg" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
-									<span class="super-heading-sm">Lorem.</span>
+									<span class="super-heading-sm">Autoservicio de</span>
 									<h3 class="heading">Estacionamiento</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias officia perferendis modi impedit, rem quasi veritatis. Consectetur obcaecati incidunt, quae rerum, accusamus sapiente fuga vero at. Quia, labore, reprehenderit illum dolorem quae facilis reiciendis quas similique totam sequi ducimus temporibus ex nemo, omnis perferendis earum fugit impedit molestias animi vitae.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam neque blanditiis eveniet nesciunt, beatae similique doloribus, ex impedit rem officiis placeat dignissimos molestias temporibus, in! Minima quod, consequatur neque aliquam.</p>
+									<p>En Hotel Punto MX, contamos con un convenio de Estacionamiento con DEPRISA <br>
+									Costo $300MXN/24 horas.<br>
+									</p>
 									<p class="service-hour">
 										<span>Horario de Servicio</span>
 										<strong>7:30 AM - 8:00 PM</strong>
@@ -442,6 +443,7 @@
 							</div>
 						</div>
 					</div>
+					<!--
 					<div class="tab-content" data-tab-content="tab5">
 						<div class="container">
 							<div class="row">
@@ -461,6 +463,8 @@
 							</div>
 						</div>
 					</div>
+					-->
+					<!--
 					<div class="tab-content" data-tab-content="tab6">
 						<div class="container">
 							<div class="row">
@@ -480,6 +484,7 @@
 							</div>
 						</div>
 					</div>
+					-->
 				</div>
 			</div>
 		</div>
