--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 									<span class="super-heading-sm">Conoce nuestro</span>
 									<h3 class="heading">Cafe MX</h3>
 									<p>La tradición en Café MX se ve reflejada como lugar de reunión, para discutir y pasar el tiempo;  no pretendemos ser sólo un sitio para consumir, somos el punto donde, con la excusa del café, se pasa el tiempo. En Café MX te haremos formar parte de casa para que tus sentidos sean tocados por cada bebida que preparamos con amor y dedicación.
-									 Visítanos y no te arrepentirás de nuestro Café</p>
+									 Visítanos y no te arrepentirás de nuestro Café <a href="services.html">Goto link</a></p>
 									<p class="service-hour">
 										<span>Horario de Servicio</span>
 										<strong>7:30 AM - 8:00 PM</strong>
@@ -408,17 +408,18 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
-									<img src="images/tab_img_3.jpg" class="img-responsive" alt="Image">
+									<img src="assets/webp/RECEPCION.webp" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
 									<span class="super-heading-sm">Autoservicio de</span>
 									<h3 class="heading">Estacionamiento</h3>
 									<p>En Hotel Punto MX, contamos con un convenio de Estacionamiento con DEPRISA <br>
 									Costo $300MXN/24 horas.<br>
+									<small><a href="services.html">Más información.</a></small>
 									</p>
 									<p class="service-hour">
-										<span>Horario de Servicio</span>
-										<strong>7:30 AM - 8:00 PM</strong>
+										<small>*El estacionamiento es un servicio independiente al hotel.</small><br>
+										<small>*El estacionamiento cuenta con circuito de cámaras para mayor seguridad.</small>
 									</p>
 								</div>
 							</div>
@@ -431,14 +432,10 @@
 									<img src="images/tab_img_4.jpg" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
-									<span class="super-heading-sm">Lorem.</span>
+									<span class="super-heading-sm"></span>
 									<h3 class="heading">Pet friendly</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias officia perferendis modi impedit, rem quasi veritatis. Consectetur obcaecati incidunt, quae rerum, accusamus sapiente fuga vero at. Quia, labore, reprehenderit illum dolorem quae facilis reiciendis quas similique totam sequi ducimus temporibus ex nemo, omnis perferendis earum fugit impedit molestias animi vitae.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam neque blanditiis eveniet nesciunt, beatae similique doloribus, ex impedit rem officiis placeat dignissimos molestias temporibus, in! Minima quod, consequatur neque aliquam.</p>
-									<p class="service-hour">
-										<span>-</span>
-										<strong>-</strong>
-									</p>
+									<p>Costo por perrito: $300MXN por noche.<br>En habitaciones designadas.</p>
+									<small><a href="services.html">Más información.</a></small>
 								</div>
 							</div>
 						</div>
@@ -495,33 +492,34 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="section-title text-center">
-						<h2>Nuestros clientes dicen...</h2>
+						<h2><a href="https://www.tripadvisor.com.mx/Hotel_Review-g150800-d12696075-Reviews-or10-Hotel_Punto_MX-Mexico_City_Central_Mexico_and_Gulf_Coast.html#REVIEWS" target="_blank" style="color:#FFF; font-family: 'Lato',sans-serif; font-weight: 300;">Nuestros clientes dicen...</a></h2>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="testimony">
-						<blockquote>
-							"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus consectetur deleniti dolore ducimus eaque earum excepturi facere, fugit illo ipsum nesciunt numquam odio perspiciatis placeat reprehenderit tempore veniam vero voluptate."
+						<blockquote style="text-align: center;">
+							"Hotel muy cálido con habitaciones confortables con aire acondicionado. Decoración sobria y relajante. El desayuno buffet muy variado. Localización céntrica muy cerca de todo, a pocas cuadras del Zócalo"
 						</blockquote>
-						<p class="author"><cite>Visitante 1</cite></p>
+						<p class="author"><cite>Francisco B.</cite></p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="testimony">
-						<blockquote>
-							"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus consectetur deleniti dolore ducimus eaque earum excepturi facere, fugit illo ipsum nesciunt numquam odio perspiciatis placeat reprehenderit tempore veniam vero voluptate."
+						<blockquote style="text-align: center;">
+							"Me encantó el hotel, muy cerca del centro histórico, el lugar es hermoso y el desayuno delicioso.
+							Lo recomiendo al 100%. El personal es muy amable y el internet buenísimo, muy limpio y el baño hermoso."
 						</blockquote>
-						<p class="author"><cite>Visitante 2</cite></p>
+						<p class="author"><cite>Psilovehairsalon</cite></p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="testimony">
-						<blockquote>
-							"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus consectetur deleniti dolore ducimus eaque earum excepturi facere, fugit illo ipsum nesciunt numquam odio perspiciatis placeat reprehenderit tempore veniam vero voluptate."
+						<blockquote style="text-align: center;">
+							"Lugar maravilloso, excelente ubicación y muy cómodas las instalaciones. Las habitaciones tienen lo justo pare sentirse cómodo, lindas, modernas y acogedoras. El personal del hotel fue lo que más nos gustó, todos supremamente amables. ¡Recomendamos ampliamente este hotel!"
 						</blockquote>
-						<p class="author"><cite>Visitante 3</cite></p>
+						<p class="author"><cite>Sebastian Suárez</cite></p>
 					</div>
 				</div>
 			</div>
@@ -540,36 +538,36 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-					<div class="blog-grid" style="background-image: url(images/image-1.jpg);">
+					<div class="blog-grid" style="background-image: url(assets/webp/SUITE_CON_JACUZZI.webp); background-size: contain;">
 						<div class="date text-center">
 							<span>09</span>
 							<small>Ago</small>
 						</div>
 					</div>
 					<div class="desc">
-						<h3><a href="#">Lorem ipsum dolor sit.</a></h3>
+						<h3><a href="#"></a></h3>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="blog-grid" style="background-image: url(images/image-2.jpg);">
+					<div class="blog-grid" style="background-image: url(assets/webp/AMENIDADES.webp); background-size: contain;">
 						<div class="date text-center">
 							<span>09</span>
 							<small>Ago</small>
 						</div>
 					</div>
 					<div class="desc">
-						<h3><a href="#">Lorem ipsum dolor sit.</a></h3>
+						<h3><a href="#"></a></h3>
 					</div>
 				</div>
 				<div class="col-md-4">
-					<div class="blog-grid" style="background-image: url(images/image-3.jpg);">
+					<div class="blog-grid" style="background-image: url(assets/webp/ROOM_SERVICE.webp); background-size: contain;">
 						<div class="date text-center">
 							<span>09</span>
 							<small>Ago</small>
 						</div>
 					</div>
 					<div class="desc">
-						<h3><a href="#">Lorem ipsum dolor sit.</a></h3>
+						<h3><a href="#"></a></h3>
 					</div>
 				</div>
 			</div>
@@ -581,7 +579,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="copyright">
-						<p><small>&copy; Propuesta EKNR<br> Todos los derechos reservados. </small> <br>
+						<p><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
 						</p>
 					</div>
 				</div>
@@ -592,7 +590,7 @@
 							<ul class="link">
 								<li><a href="#">Acerca de Nosotros</a></li>
 								<li><a href="#">Sucursal</a></li>
-								<li><a href="#">Lorem ipsum</a></li>
+								<li><a href="#">Bolsa de Trabajo</a></li>
 								<li><a href="#">Lorem ipsum</a></li>
 							</ul>
 						</div>
