Bolsa de trabajo

--- a/bolsa-de-trabajo.html
+++ b/bolsa-de-trabajo.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Servicios | Hoteles PUNTO MX</title>
+    <title>Bolsa de Trabajo | Hoteles PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Website Hoteles PUNTO MX" />
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
@@ -172,30 +172,30 @@
 
 </div>
 
-            <!-- Javascripts -->
-            <script src="js/jquery-2.1.4.min.js"></script>
-            <!-- Dropdown Menu -->
-            <script src="js/hoverIntent.js"></script>
-            <script src="js/superfish.js"></script>
-            <!-- Bootstrap -->
-            <script src="js/bootstrap.min.js"></script>
-            <!-- Waypoints -->
-            <script src="js/jquery.waypoints.min.js"></script>
-            <!-- Counters -->
-            <script src="js/jquery.countTo.js"></script>
-            <!-- Stellar Parallax -->
-            <script src="js/jquery.stellar.min.js"></script>
-            <!-- Owl Slider -->
-            <!-- // <script src="js/owl.carousel.min.js"></script> -->
-            <!-- Date Picker -->
-            <script src="js/bootstrap-datepicker.min.js"></script>
-            <!-- CS Select -->
-            <script src="js/classie.js"></script>
-            <script src="js/selectFx.js"></script>
-            <!-- Flexslider -->
-            <script src="js/jquery.flexslider-min.js"></script>
+<!-- Javascripts -->
+<script src="js/jquery-2.1.4.min.js"></script>
+<!-- Dropdown Menu -->
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.js"></script>
+<!-- Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Counters -->
+<script src="js/jquery.countTo.js"></script>
+<!-- Stellar Parallax -->
+<script src="js/jquery.stellar.min.js"></script>
+<!-- Owl Slider -->
+<!-- // <script src="js/owl.carousel.min.js"></script> -->
+<!-- Date Picker -->
+<script src="js/bootstrap-datepicker.min.js"></script>
+<!-- CS Select -->
+<script src="js/classie.js"></script>
+<script src="js/selectFx.js"></script>
+<!-- Flexslider -->
+<script src="js/jquery.flexslider-min.js"></script>
 
-            <script src="js/custom.js"></script>
+<script src="js/custom.js"></script>
 
 </body>
 </html>
