--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
 								<li><a href="#">Acerca de Nosotros</a></li>
 								<li><a href="#">Sucursal</a></li>
 								<li><a href="#">Bolsa de Trabajo</a></li>
-								<li><a href="#">Lorem ipsum</a></li>
+								<li><a href="#">Aviso de Privacidad</a></li>
 							</ul>
 						</div>
 						<div class="col-md-6">
