--- a/index.html
+++ b/index.html
@@ -597,10 +597,10 @@
 						<div class="col-md-6">
 							<h3>Comodidades</h3>
 							<ul class="link">
-								<li><a href="#">Resturant</a></li>
-								<li><a href="#">Bars</a></li>
-								<li><a href="#">Estacionamiento</a></li>
-								<li><a href="#">Pet Friendly</a></li>
+								<li><a href="restaurant.html">Resturant</a></li>
+								<li><a href="cafe.html">Cafetería</a></li>
+								<li><a href="services.html">Estacionamiento</a></li>
+								<li><a href="services.html">Pet Friendly</a></li>
 								<!--<li><a href="#">5item</a></li>
 								<li><a href="#">6item</a></li>-->
 							</ul>
@@ -620,10 +620,11 @@
 				<div class="col-md-3">
 					<ul class="social-icons">
 						<li>
-							<a href="#"><i class="icon-twitter-with-circle"></i></a>
-							<a href="#"><i class="icon-facebook-with-circle"></i></a>
-							<a href="#"><i class="icon-instagram-with-circle"></i></a>
-							<a href="#"><i class="icon-linkedin-with-circle"></i></a>
+							<a href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="icon-twitter-with-circle"></i></a>
+							<a href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="icon-facebook-with-circle"></i></a>
+							<a href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="icon-instagram-with-circle"></i></a>
+							<!--<a href="#"><i class="fa fa-tripadvisor"></i></a>-->
+							<!--<a href="#"><i class="icon-linkedin-with-circle"></i></a>-->
 						</li>
 					</ul>
 				</div>
