--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					<div class="desc">
 						<h3>Ejecutiva</h3>
 						<p>Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios.</p>
-						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí<i class="ti-angle-right"></i></a></p>
+						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí<i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
 
@@ -248,7 +248,7 @@
 						<div class="desc">
 							<h3>Deluxe Cama Queen</h3>
 							<p>Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas.</p>
-							<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
 					<div class="f-hotel">
@@ -260,7 +260,7 @@
 						<div class="desc">
 							<h3>Deluxe Dos Camas</h3>
 							<p>Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas.</p>
-							<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -274,7 +274,7 @@
 					<div class="desc">
 						<h3>Master Suite</h3>
 						<p>Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte.</p>
-						<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
 
@@ -288,7 +288,7 @@
 						<div class="desc">
 							<h3>Suite Tina Antigua</h3>
 							<p>En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel.</p>
-							<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
 					<div class="f-hotel">
@@ -300,7 +300,7 @@
 						<div class="desc">
 							<h3>Suite Jacuzzi</h3>
 							<p>Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel.</p>
-							<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
 				</div>
