--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 									<span class="super-heading-sm">Conoce nuestro</span>
 									<h3 class="heading">Cafe MX</h3>
 									<p>La tradición en Café MX se ve reflejada como lugar de reunión, para discutir y pasar el tiempo;  no pretendemos ser sólo un sitio para consumir, somos el punto donde, con la excusa del café, se pasa el tiempo. En Café MX te haremos formar parte de casa para que tus sentidos sean tocados por cada bebida que preparamos con amor y dedicación.
-									 Visítanos y no te arrepentirás de nuestro Café <a href="services.html">Goto link</a></p>
+									 Visítanos y no te arrepentirás de nuestro Café</p>
 									<p class="service-hour">
 										<span>Horario de Servicio</span>
 										<strong>7:30 AM - 8:00 PM</strong>
@@ -414,7 +414,7 @@
 									<span class="super-heading-sm">Autoservicio de</span>
 									<h3 class="heading">Estacionamiento</h3>
 									<p>En Hotel Punto MX, contamos con un convenio de Estacionamiento con DEPRISA <br>
-									Costo $300MXN/24 horas.<br>
+									Costo $300MXN/24 horas.<br><br>
 									<small><a href="services.html">Más información.</a></small>
 									</p>
 									<p class="service-hour">
