--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 		   					<div class="desc">
 								<p><span>El punto más cómodo de México</span></p>
 								<h2>En el centro de la CDMX</h2>
-								<p>
+								<!--<p>
 									<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
-								</p>
+								</p>-->
 		   					</div>
 		   				</div>
 		   			</div>
@@ -164,9 +164,9 @@
 		   					<div class="desc">
 								<p><span>Al reservar por nuestro sitio web</span></p>
 								<h2>Tarifa especial</h2>
-								<p>
+								<!--<p>
 									<a href="#" class="btn btn-primary btn-lg">Ver más...</a>
-								</p>
+								</p>-->
 		   					</div>
 		   				</div>
 		   			</div>
@@ -198,7 +198,7 @@
 					<span class="fh5co-counter-label">Viajeros puntuaron como "Excelente" en Tripadvisor</span>
 				</div>
 				<div class="col-md-4 text-center myc">
-					<span class="fh5co-counter js-counter" data-from="0" data-to="29" data-speed="5000" data-refresh-interval="50"></span>
+					<span class="fh5co-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
 					<span class="fh5co-counter-label">Atracciones en un radio de 0.5km</span>
 				</div>
 				<!--<div class="col-md-3 text-center">
@@ -415,7 +415,7 @@
 									<h3 class="heading">Estacionamiento</h3>
 									<p>En Hotel Punto MX, contamos con un convenio de Estacionamiento con DEPRISA <br>
 									Costo $300MXN/24 horas.<br><br>
-									<small><a href="services.html">Más información.</a></small>
+									<!--<small><a href="services.html">Más información.</a></small>-->
 									</p>
 									<p class="service-hour">
 										<small>*El estacionamiento es un servicio independiente al hotel.</small><br>
@@ -435,7 +435,7 @@
 									<span class="super-heading-sm"></span>
 									<h3 class="heading">Pet friendly</h3>
 									<p>Costo por perrito: $300MXN por noche.<br>En habitaciones designadas.</p>
-									<small><a href="services.html">Más información.</a></small>
+									<!--<small><a href="services.html">Más información.</a></small>-->
 								</div>
 							</div>
 						</div>
