--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 			<div class="row">
 				<div id="availability">
 					<div class="a-col action">
-						<a href="#">
+						<a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank">
 							<span>Reserva</span> ahora
 						</a>
 					</div>
@@ -224,7 +224,21 @@
 				</div>
 			</div>
 
+			<div class="feature-full-1col">
+				<div class="image" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/85.png);">
+					<div class="descrip text-center">
+						<p><small>Reserva por</small><span>$1,380.76/noche</span></p>
+					</div>
+				</div>
+				<div class="desc">
+					<h3>Junior Suite</h3>
+					<p>Habitación amplia con cama king size, con vista interior, en ella encontraras la comodidad necesaria para relajarte.</p>
+					<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
+				</div>
+			</div>
+
 			<div class="row">
+				<!--Ejecutiva-->
 				<div class="feature-full-1col">
 					<div class="image" style="background-image: url(assets/webp/EJECUTIVA_1.webp);">
 						<div class="descrip text-center">
@@ -237,8 +251,8 @@
 						<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí<i class="ti-angle-right"></i></a></p>
 					</div>
 				</div>
-
 				<div class="feature-full-2col">
+					<!--Deluxe Cama Queen-->
 					<div class="f-hotel">
 						<div class="image" style="background-image: url(assets/webp/DELUXE_QUEEN.png);">
 							<div class="descrip text-center">
@@ -251,6 +265,7 @@
 							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
+					<!--Deluxe dos camas-->
 					<div class="f-hotel">
 						<div class="image" style="background-image: url(assets/webp/DELUXE_2_CAMAS_2.webp);">
 							<div class="descrip text-center">
@@ -303,19 +318,6 @@
 							<p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 						</div>
 					</div>
-				</div>
-			</div>
-
-			<div class="feature-full-1col">
-				<div class="image" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/85.png);">
-					<div class="descrip text-center">
-						<p><small>Reserva por</small><span>$1,380.76/noche</span></p>
-					</div>
-				</div>
-				<div class="desc">
-					<h3>Junior Suite</h3>
-					<p>Habitación amplia con cama king size, con vista interior, en ella encontraras la comodidad necesaria para relajarte.</p>
-					<p><a href="#" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
 				</div>
 			</div>
 
@@ -440,48 +442,6 @@
 							</div>
 						</div>
 					</div>
-					<!--
-					<div class="tab-content" data-tab-content="tab5">
-						<div class="container">
-							<div class="row">
-								<div class="col-md-6">
-									<img src="images/tab_img_5.jpg" class="img-responsive" alt="Image">
-								</div>
-								<div class="col-md-6">
-									<span class="super-heading-sm">World Class</span>
-									<h3 class="heading">Spa</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias officia perferendis modi impedit, rem quasi veritatis. Consectetur obcaecati incidunt, quae rerum, accusamus sapiente fuga vero at. Quia, labore, reprehenderit illum dolorem quae facilis reiciendis quas similique totam sequi ducimus temporibus ex nemo, omnis perferendis earum fugit impedit molestias animi vitae.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam neque blanditiis eveniet nesciunt, beatae similique doloribus, ex impedit rem officiis placeat dignissimos molestias temporibus, in! Minima quod, consequatur neque aliquam.</p>
-									<p class="service-hour">
-										<span>Service Hours</span>
-										<strong>7:30 AM - 8:00 PM</strong>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					-->
-					<!--
-					<div class="tab-content" data-tab-content="tab6">
-						<div class="container">
-							<div class="row">
-								<div class="col-md-6">
-									<img src="images/tab_img_6.jpg" class="img-responsive" alt="Image">
-								</div>
-								<div class="col-md-6">
-									<span class="super-heading-sm">World Class</span>
-									<h3 class="heading">Gym</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias officia perferendis modi impedit, rem quasi veritatis. Consectetur obcaecati incidunt, quae rerum, accusamus sapiente fuga vero at. Quia, labore, reprehenderit illum dolorem quae facilis reiciendis quas similique totam sequi ducimus temporibus ex nemo, omnis perferendis earum fugit impedit molestias animi vitae.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam neque blanditiis eveniet nesciunt, beatae similique doloribus, ex impedit rem officiis placeat dignissimos molestias temporibus, in! Minima quod, consequatur neque aliquam.</p>
-									<p class="service-hour">
-										<span>Service Hours</span>
-										<strong>7:30 AM - 8:00 PM</strong>
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					-->
 				</div>
 			</div>
 		</div>
