--- a/rooms.html
+++ b/rooms.html
@@ -78,18 +78,6 @@
                     <li><a href="services.html">Servicios & Amenidades</a></li>
                     <li><a href="restaurant.html">Restaurante MX</a></li>
                     <li><a href="cafe.html">Café MX</a></li>
-                    <!--<li>
-                        <a href="#" class="fh5co-sub-ddown">King Hotel</a>
-                        <ul class="fh5co-sub-menu">
-                            <li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Five Star Hotel</a></li>-->
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
@@ -103,14 +91,14 @@
 
     </div>
     <!-- end:fh5co-header -->
-    <div class="fh5co-parallax" style="background-image: url(images/slider1.jpg);" data-stellar-background-ratio="0.5">
+    <div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp);" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
             <div class="fh5co-intro fh5co-table-cell">
               <h1 class="text-center">Conoce nuestras Habitaciones</h1>
-              <p>Made with love</p>
+              <p>y reserva</p>
             </div>
           </div>
         </div>
@@ -120,47 +108,51 @@
     <div id="fh5co-hotel-section">
       <div class="container">
         <div class="row">
+          <!--Ejecutiva-->
           <div class="col-md-4">
             <div class="hotel-content">
-              <div class="hotel-grid" style="background-image: url(images/image-1.jpg);">
-                <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="#"><i class="ti-calendar"></i> Book Now</a>
+              <div class="hotel-grid" style="background-image: url(./assets/webp/EJECUTIVA_1.webp); background-size: contain;">
+                <div class="price"><small>Reserva por</small><span>$1,087.87/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
-                <h3><a href="#">Hotel Name</a></h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3><a href="#">Ejecutiva</a></h3>
+                <p>Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios.</p>
               </div>
             </div>
           </div>
+          <!--Deluxe Cama Queen-->
           <div class="col-md-4">
             <div class="hotel-content">
-              <div class="hotel-grid" style="background-image: url(images/image-2.jpg);">
-                <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="#"><i class="ti-calendar"></i> Book Now</a>
+              <div class="hotel-grid" style="background-image: url(./assets/webp/DELUXE_QUEEN.png); background-size: contain;">
+                <div class="price"><small>Reserva por</small><span>$1,221.76/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Reserva aquí</a>
               </div>
               <div class="desc">
-                <h3><a href="#">Hotel Name</a></h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3><a href="#">Deluxe Cama Queen</a></h3>
+                <p>Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas.</p>
               </div>
             </div>
           </div>
+          <!--Deluxe 2 camas-->
           <div class="col-md-4">
             <div class="hotel-content">
-              <div class="hotel-grid" style="background-image: url(images/image-3.jpg);">
-                <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="#"><i class="ti-calendar"></i> Book Now</a>
+              <div class="hotel-grid" style="background-image: url(./assets/webp/DELUXE_2_CAMAS_2.webp);">
+                <div class="price"><small>Reserva por</small><span>$1,297.08/noche</span></div>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Book Now</a>
               </div>
               <div class="desc">
-                <h3><a href="#">Hotel Name</a></h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <h3><a href="#">Deluxe Dos Camas</a></h3>
+                <p>Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas.</p>
               </div>
             </div>
           </div>
+          <!---->
           <div class="col-md-4">
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(images/image-4.jpg);">
                 <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="#"><i class="ti-calendar"></i> Book Now</a>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Book Now</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Hotel Name</a></h3>
@@ -172,7 +164,7 @@
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(images/image-5.jpg);">
                 <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="#"><i class="ti-calendar"></i> Book Now</a>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Book Now</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Hotel Name</a></h3>
@@ -184,7 +176,7 @@
             <div class="hotel-content">
               <div class="hotel-grid" style="background-image: url(images/image-6.jpg);">
                 <div class="price"><small>For as low as</small><span>$100/night</span></div>
-                <a class="book-now text-center" href="#"><i class="ti-calendar"></i> Book Now</a>
+                <a class="book-now text-center" href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink"><i class="ti-calendar"></i> Book Now</a>
               </div>
               <div class="desc">
                 <h3><a href="#">Hotel Name</a></h3>
